SERVER-72846 Fix misleading startup warning about client certificate validation