src/mongo/db/startup_warnings_common.cpp
@@ -130,17 +130,19 @@ void logCommonStartupWarnings(const ServerGlobalParams& serverParams) {
     if (sslGlobalParams.sslMode.load() != SSLParams::SSLMode_disabled &&
 #ifdef MONGO_CONFIG_SSL_CERTIFICATE_SELECTORS
         sslGlobalParams.sslCertificateSelector.empty() &&
+        sslGlobalParams.sslClusterCertificateSelector.empty() &&
 #endif
-        sslGlobalParams.sslCAFile.empty()) {
+        sslGlobalParams.sslCAFile.empty() && sslGlobalParams.sslClusterCAFile.empty()) {
 #ifdef MONGO_CONFIG_SSL_CERTIFICATE_SELECTORS
         LOGV2_WARNING(22132,
-                      "No client certificate validation can be performed since no CA file has been "
-                      "provided and no sslCertificateSelector has been specified. Please specify "
-                      "an sslCAFile parameter");
+                      "No client certificate validation can be performed since no CA File or "
+                      "cluster CA File has been provided and no sslCertificateSelector has "
+                      "been specified. Please specify an sslCAFile or a clusterCAFile parameter");
 #else
-        LOGV2_WARNING(22133,
-                      "No client certificate validation can be performed since no CA file has been "
-                      "provided. Please specify an sslCAFile parameter");
+        LOGV2_WARNING(
+            22133,
+            "No client certificate validation can be performed since no CA file or cluster CA File "
+            "has been provided. Please specify an sslCAFile or a clusterCAFile parameter");
 #endif
     }
 
